[gd_scene load_steps=9 format=3 uid="uid://dpscdg0f7o6ft"]

[ext_resource type="Texture2D" uid="uid://bwqotvkpjbndm" path="res://addons/graph_dialog_system/icons/Search.svg" id="1_1wtbh"]
[ext_resource type="Script" path="res://addons/graph_dialog_system/editor/scripts/file_manager.gd" id="1_3v21c"]
[ext_resource type="Texture2D" uid="uid://dv53yhmd7k3d5" path="res://addons/graph_dialog_system/icons/AddDialog.svg" id="2_fjick"]
[ext_resource type="Texture2D" uid="uid://vfuxkihislug" path="res://addons/graph_dialog_system/icons/AddChar.svg" id="3_ljhu2"]
[ext_resource type="Texture2D" uid="uid://bsllhsbt3u8y6" path="res://addons/graph_dialog_system/icons/Save.svg" id="4_2tafu"]
[ext_resource type="Texture2D" uid="uid://y4axxgwk17jl" path="res://addons/graph_dialog_system/icons/Folder.svg" id="4_prnvu"]
[ext_resource type="Texture2D" uid="uid://db2rm5mxqrejo" path="res://addons/graph_dialog_system/icons/Close.svg" id="8_s6vw8"]
[ext_resource type="PackedScene" uid="uid://bxwvdcjc16ytf" path="res://addons/graph_dialog_system/editor/components/field_file.tscn" id="8_wehoa"]

[node name="FileManager" type="VSplitContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3v21c")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Container" type="VBoxContainer" parent="Margin"]
layout_mode = 2

[node name="FileOptions" type="HBoxContainer" parent="Margin/Container"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="NewFile" type="Button" parent="Margin/Container/FileOptions"]
unique_name_in_owner = true
layout_mode = 2
icon = ExtResource("2_fjick")
flat = true

[node name="VSeparator" type="VSeparator" parent="Margin/Container/FileOptions"]
layout_mode = 2

[node name="NewChar" type="Button" parent="Margin/Container/FileOptions"]
unique_name_in_owner = true
layout_mode = 2
icon = ExtResource("3_ljhu2")
flat = true

[node name="VSeparator2" type="VSeparator" parent="Margin/Container/FileOptions"]
layout_mode = 2

[node name="OpenFile" type="Button" parent="Margin/Container/FileOptions"]
unique_name_in_owner = true
layout_mode = 2
icon = ExtResource("4_prnvu")
flat = true

[node name="VSeparator3" type="VSeparator" parent="Margin/Container/FileOptions"]
layout_mode = 2

[node name="SaveFile" type="Button" parent="Margin/Container/FileOptions"]
unique_name_in_owner = true
layout_mode = 2
icon = ExtResource("4_2tafu")
flat = true

[node name="FileDisplay" type="VBoxContainer" parent="Margin/Container"]
layout_mode = 2
size_flags_vertical = 3

[node name="FileSearch" type="LineEdit" parent="Margin/Container/FileDisplay"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Filter Files"
right_icon = ExtResource("1_1wtbh")
caret_blink = true
caret_blink_interval = 0.5

[node name="FileList" type="ItemList" parent="Margin/Container/FileDisplay"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 3
same_column_width = true

[node name="FilteredList" type="ItemList" parent="Margin/Container/FileDisplay"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 3
same_column_width = true

[node name="CSVFileContainer" type="VBoxContainer" parent="Margin/Container"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="Margin/Container/CSVFileContainer"]
layout_mode = 2
text = "CSV Translations File"

[node name="FieldFile" parent="Margin/Container/CSVFileContainer" instance=ExtResource("8_wehoa")]
layout_mode = 2

[node name="Version" type="Label" parent="Margin/Container"]
layout_mode = 2
theme_override_colors/font_color = Color(0.619608, 0.611765, 0.568627, 1)
text = "v0.1
"
horizontal_alignment = 2
vertical_alignment = 1

[node name="PopupWindows" type="Node" parent="."]

[node name="FileMenu" type="PopupMenu" parent="PopupWindows"]
size = Vector2i(102, 120)
item_count = 5
item_0/text = "Save"
item_0/icon = ExtResource("4_2tafu")
item_1/text = "Save As..."
item_1/icon = ExtResource("4_2tafu")
item_1/id = 1
item_2/id = 4
item_2/separator = true
item_3/text = "Close"
item_3/icon = ExtResource("8_s6vw8")
item_3/id = 2
item_4/text = "Close All"
item_4/icon = ExtResource("8_s6vw8")
item_4/id = 3

[node name="ConfirmCloseFiles" type="AcceptDialog" parent="PopupWindows"]
title = "Please Confirm..."
initial_position = 4
size = Vector2i(336, 106)
dialog_text = "The file/s contains unsaved changes. 
Are you sure you want to close this file/s?"

[node name="NewDialog" type="FileDialog" parent="PopupWindows"]
title = "New Dialog"
initial_position = 4
size = Vector2i(600, 400)
ok_button_text = "Create File"
filters = PackedStringArray("*.json")

[node name="NewChar" type="FileDialog" parent="PopupWindows"]
auto_translate_mode = 1
title = "New Character"
initial_position = 4
size = Vector2i(600, 400)
ok_button_text = "Create File"
filters = PackedStringArray("*.json")

[node name="OpenFile" type="FileDialog" parent="PopupWindows"]
auto_translate_mode = 1
title = "Open a File"
initial_position = 4
size = Vector2i(600, 400)
ok_button_text = "Open"
file_mode = 0
filters = PackedStringArray("*.json")

[node name="SaveFile" type="FileDialog" parent="PopupWindows"]
auto_translate_mode = 1
initial_position = 4
size = Vector2i(600, 400)
ok_button_text = "Save"
filters = PackedStringArray("*.json")

[connection signal="pressed" from="Margin/Container/FileOptions/NewFile" to="." method="_on_new_dialog_pressed"]
[connection signal="pressed" from="Margin/Container/FileOptions/NewChar" to="." method="_on_new_char_pressed"]
[connection signal="pressed" from="Margin/Container/FileOptions/OpenFile" to="." method="_on_open_file_pressed"]
[connection signal="pressed" from="Margin/Container/FileOptions/SaveFile" to="." method="_on_save_file_pressed"]
[connection signal="focus_exited" from="Margin/Container/FileDisplay/FileSearch" to="." method="_on_file_search_focus_exited"]
[connection signal="text_changed" from="Margin/Container/FileDisplay/FileSearch" to="." method="_on_file_search_text_changed"]
[connection signal="empty_clicked" from="Margin/Container/FileDisplay/FileList" to="." method="_on_empty_clicked"]
[connection signal="item_clicked" from="Margin/Container/FileDisplay/FileList" to="." method="_on_item_clicked"]
[connection signal="item_selected" from="Margin/Container/FileDisplay/FileList" to="." method="_on_file_selected"]
[connection signal="empty_clicked" from="Margin/Container/FileDisplay/FilteredList" to="." method="_on_empty_clicked"]
[connection signal="item_clicked" from="Margin/Container/FileDisplay/FilteredList" to="." method="_on_item_clicked"]
[connection signal="item_selected" from="Margin/Container/FileDisplay/FilteredList" to="." method="_on_file_selected"]
[connection signal="id_pressed" from="PopupWindows/FileMenu" to="." method="_on_file_menu_pressed"]
[connection signal="canceled" from="PopupWindows/ConfirmCloseFiles" to="." method="_on_confirm_closing_canceled"]
[connection signal="custom_action" from="PopupWindows/ConfirmCloseFiles" to="." method="_on_confirm_closing_action"]
